<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ScreenContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:padding="10dp"
        >
        <EditText
            android:id="@+id/Screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:hint="@string/screen"
            android:inputType="none"
            android:maxLength="16"
            android:textIsSelectable="true"
            />
    </android.support.design.widget.TextInputLayout>

    <GridLayout
        android:id="@+id/Pad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:columnCount="5"
        android:rowCount="4"
        android:orientation="horizontal"
        android:alignmentMode="alignMargins"
        >

        <Button
            android:id="@+id/Pad_07"
            android:theme="@style/Btn_pad"
            style="@style/Btn_simple"
            android:text="@string/btn_07" />
        <Button
            android:id="@+id/Pad_08"
            android:theme="@style/Btn_pad"
            style="@style/Btn_simple"
            android:text="@string/btn_08" />
        <Button
            android:id="@+id/Pad_09"
            android:theme="@style/Btn_pad"
            style="@style/Btn_simple"
            android:text="@string/btn_09" />
        <Button
            android:id="@+id/Pad_clear"
            android:theme="@style/Btn_Ot"
            style="@style/Btn_double"
            android:text="@string/btn_clear" />
        <Button
            android:id="@+id/Pad_04"
            android:theme="@style/Btn_pad"
            style="@style/Btn_simple"
            android:text="@string/btn_04" />
        <Button
            android:id="@+id/Pad_05"
            android:theme="@style/Btn_pad"
            style="@style/Btn_simple"
            android:text="@string/btn_05" />
        <Button
            android:id="@+id/Pad_06"
            android:theme="@style/Btn_pad"
            style="@style/Btn_simple"
            android:text="@string/btn_06" />
        <Button
            android:id="@+id/Pad_neg"
            android:theme="@style/Btn_Op"
            style="@style/Btn_simple"
            android:text="@string/btn_neg" />
        <Button
            android:id="@+id/Pad_div"
            android:theme="@style/Btn_Op"
            style="@style/Btn_simple"
            android:text="@string/btn_div" />
        <Button
            android:id="@+id/Pad_01"
            android:theme="@style/Btn_pad"
            style="@style/Btn_simple"
            android:text="@string/btn_01" />
        <Button
            android:id="@+id/Pad_02"
            android:theme="@style/Btn_pad"
            style="@style/Btn_simple"
            android:text="@string/btn_02" />
        <Button
            android:id="@+id/Pad_03"
            android:theme="@style/Btn_pad"
            style="@style/Btn_simple"
            android:text="@string/btn_03" />
        <Button
            android:id="@+id/Pad_sum"
            android:theme="@style/Btn_Op"
            style="@style/Btn_simple"
            android:text="@string/btn_sum" />
        <Button
            android:id="@+id/Pad_mult"
            android:theme="@style/Btn_Op"
            style="@style/Btn_simple"
            android:text="@string/btn_mult" />
        <Button
            android:id="@+id/Pad_dot"
            android:theme="@style/Btn_Ot"
            style="@style/Btn_simple"
            android:text="@string/btn_dot" />
        <Button
            android:id="@+id/Pad_00"
            android:theme="@style/Btn_pad"
            style="@style/Btn_simple"
            android:text="@string/btn_00" />
        <Button
            android:id="@+id/Pad_equal"
            android:theme="@style/Btn_Ot"
            style="@style/Btn_triple"
            android:text="@string/btn_equal" />
    </GridLayout>
</LinearLayout>